--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,7 +305,7 @@ nav {
 header {
   min-height: 100vh;
   background: linear-gradient(rgba(63, 208, 212, 0.5), rgba(0, 0, 0, 0.7)),
-    url(/assets/img/banner2.jpg) center/cover no-repeat;
+    url(/assets/img/banner2.png) center/cover no-repeat;
 }
 .banner {
   min-height: 100vh;
@@ -407,7 +407,7 @@ footer p {
 
 .imagenEstudio{
   min-height: 100vh;
-  background: url(/assets/img/banner3.jpg) center/cover no-repeat;
+  background: url(/assets/img/banner3.png) center/cover no-repeat;
 }
 
 /* galeriaFotos */
