--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,7 +304,7 @@ nav {
 /* hero */
 header {
   min-height: 100vh;
-  background-image: url(/assets/img/banner2-3.png);
+  background-image: url(/assets/img/bannerPrincipal.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
