--- a/assets/css/contacto.css
+++ b/assets/css/contacto.css
@@ -304,10 +304,16 @@ nav {
 /* hero */
 header {
   min-height: 20vh;
-    background-image:url(/assets/img/banner1.png);
+  background: linear-gradient(rgba(63, 208, 212, 0.5), rgba(0, 0, 0, 0.7));
+
+  /* el codigo a continuacion no lo pude implementar me daba error 404
+    en el liveServer me funcinaba bien pero cuando lo subi a GitHub me arrojaba ese eror
+  */
+
+    /* background-image:url(/assets/img/banner1.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center; */
 }
 .banner {
   min-height: 30vh;
